--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
