--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
     "@mui/x-date-pickers": "^7.28.0",
+    "@turf/turf": "^7.2.0",
     "apexcharts": "^4.7.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
