--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #REACT_APP_SERVER_API= http://localhost:8000
-REACT_APP_SERVER_API= https://antbd-server.vercel.app/
+REACT_APP_SERVER_API= https://route.antbd.net
 REACT_APP_GOOGLE_API= AIzaSyDo6tI6z6qCTkXDp-pSl8F22SvsvNR1rOA
