--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#REACT_APP_SERVER_API= http://localhost:8000
-REACT_APP_SERVER_API= https://api.antbd.com/
-REACT_APP_GOOGLE_API= AIzaSyDo6tI6z6qCTkXDp-pSl8F22SvsvNR1rOA
+#VITE_SERVER_API= http://localhost:8000
+VITE_SERVER_API= https://api.antbd.com/
+VITE_GOOGLE_MAPS_API_KEY = AIzaSyDo6tI6z6qCTkXDp-pSl8F22SvsvNR1rOA
