--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/dotlottie-react": "^0.17.8",
     "@mui/material": "^6.2.0",
     "@mui/x-date-pickers": "^7.28.0",
     "@turf/turf": "^7.2.0",
@@ -20,6 +21,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.23.25",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lottie-react": "^2.4.1",
